v0.9/_sources/citing.rst.txt
.. _Citing_MetPy:

Citing MetPy
============

If MetPy played an important role in your research, then please add us to
your reference list using one of the options below.

DOI: `10.5065/D6WW7G29 <https://doi.org/10.5065/D6WW7G29>`_

************
BibTeX entry
************

Example BibTeX entry::

  @software{metpy,
    author = {May, Ryan and Arms, Sean and Marsh, Patrick and Bruning, Eric and Leeman, John },
    organization = {Unidata},
    title = {MetPy: A {Python} Package for Meteorological Data},
    year = {2008 - 2017},
    version = {0.4.3},
    doi = {10.5065/D6WW7G29},
    url = {https://github.com/Unidata/MetPy},
    address = {Boulder, Colorado}
  }


*****************
AMS Journal Style
*****************

Example Citation::

  May, R. M., Arms, S. C., Marsh, P., Bruning, E. and Leeman, J. R., 2017:
      MetPy: A Python Package for Meteorological Data.
      Unidata, Accessed 31 March 2017.
      [Available online at https://github.com/Unidata/MetPy.]
      doi:10.5065/D6WW7G29.
