v0.11/_sources/citing.rst.txt
.. _Citing_MetPy:

Citing MetPy
============

If MetPy played an important role in your research, then please add us to
your reference list using one of the options below.

DOI: `10.5065/D6WW7G29 <https://doi.org/10.5065/D6WW7G29>`_

************
BibTeX entry
************

Example BibTeX entry:

.. parsed-literal::

  @software{metpy,
    author = {May, Ryan M. and Arms, Sean C. and Marsh, Patrick and Bruning, Eric and Leeman, John R.
              and Goebbert, Kevin and Thielen, Jonathan E. and Bruck, Zachary},
    organization = {Unidata},
    title = {MetPy: A {Python} Package for Meteorological Data},
    year = {2008 - |cite_year|},
    version = {|cite_version|},
    doi = {10.5065/D6WW7G29},
    url = {https://github.com/Unidata/MetPy},
    address = {Boulder, Colorado}
  }


*****************
AMS Journal Style
*****************

Example Citation:

.. parsed-literal::

  May, R. M., Arms, S. C., Marsh, P., Bruning, E., Leeman, J. R., Goebbert, K., Thielen, J. E.,
      and Bruick, Z., |cite_year|: MetPy: A Python Package for Meteorological Data.
      Version |cite_version|, Unidata, Accessed |access_date|.
      [Available online at https://github.com/Unidata/MetPy.]
      doi:10.5065/D6WW7G29.
